--- a/index.html
+++ b/index.html
@@ -105,12 +105,13 @@
           </div>
           <div class="text-container">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
-              reprehenderit et laborum, rem, dolore eum quod voluptate
-              exercitationem nobis, nihil esse debitis maxime facere minus sint
-              delectus velit in eos quo officiis explicabo deleniti dignissimos.
-              Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-              reiciendis ea magnam? Nulla, impedit fuga!
+              Keru Sodiq is an experienced Data Analyst with a strong background
+              in data manipulation,statistical analysis, and data visualization.
+              Proficient in tools like SQL, Python, Ecel and Maching Learning.
+              Keru specializes in turning complex datasets into ationable insights to drive
+              business decisioons. With Expertise in identigying trends and optimizing process,
+              Keru have contirbuted to improving efficiency and performance across various industies.
+              Passionate about data-driven enivronments and is committed to delivering impactful results.
             </p>
           </div>
         </div>
