--- a/index.html
+++ b/index.html
@@ -105,13 +105,13 @@
           </div>
           <div class="text-container">
             <p>
-              Keru Sodiq is an experienced Data Analyst with a strong background
-              in data manipulation,statistical analysis, and data visualization.
+              I am an experienced Data Analyst with a strong background
+              in data manipulation, statistical analysis, and data visualization.
               Proficient in tools like SQL, Python, Ecel and Maching Learning.
-              Keru specializes in turning complex datasets into ationable insights to drive
-              business decisioons. With Expertise in identigying trends and optimizing process,
-              Keru have contirbuted to improving efficiency and performance across various industies.
-              Passionate about data-driven enivronments and is committed to delivering impactful results.
+              I specializes in turning complex datasets into ationable insights to drive
+              business decisions. With Expertise in identifying trends and optimizing process,
+              I have contirbuted to improving efficiency and performance across various industies,
+              passionate about data-driven enivronments and committed to delivering impactful results.
             </p>
           </div>
         </div>
