--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/profile-pic.png" alt="John Doe profile picture" />
+        <img src="./assets/profile-pic.png" alt="Keru Sodiq profile picture" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
@@ -107,8 +107,8 @@
             <p>
               I am an experienced Data Analyst with a strong background
               in data manipulation, statistical analysis, and data visualization.
-              Proficient in tools like SQL, Python, Ecel and Maching Learning.
-              I specializes in turning complex datasets into ationable insights to drive
+              Proficient in tools like SQL, Python, Excel and Maching Learning.
+              I specializes in turning complex datasets into actionable insights to drive
               business decisions. With Expertise in identifying trends and optimizing process,
               I have contirbuted to improving efficiency and performance across various industies,
               passionate about data-driven enivronments and committed to delivering impactful results.
